plugins {
    id "com.android.application"
}

android {
    namespace = "com.termux"
    compileSdk = 36
    ndkVersion = "28.2.13676358"

    defaultConfig {
        applicationId "com.termux"
        minSdk 35
        versionCode 100
        versionName "1.0.0"
    }

    signingConfigs {
        debug {
            storeFile file('testkey_untrusted.jks')
            keyAlias 'alias'
            storePassword 'xrj45yWGLbsO7W0v'
            keyPassword 'xrj45yWGLbsO7W0v'
        }
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources false // Reproducible builds
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }

        debug {
            signingConfig signingConfigs.debug
        }
    }

    externalNativeBuild {
        ndkBuild {
            path "src/main/cpp/Android.mk"
        }
    }

    buildFeatures {
        viewBinding = true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
}

dependencies {
    implementation "androidx.appcompat:appcompat:1.7.1"
    implementation "androidx.annotation:annotation:1.9.1"
    implementation "androidx.core:core:1.16.0"
    implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.viewpager:viewpager:1.1.0'
    implementation 'com.google.android.material:material:1.14.0-alpha03'
    implementation 'com.google.guava:guava:33.4.8-jre'
//    implementation "io.noties.markwon:core:4.6.2"
//    implementation "io.noties.markwon:ext-strikethrough:4.6.2"
//    implementation "io.noties.markwon:linkify:4.6.2"
//    implementation "io.noties.markwon:recycler:4.6.2"
    implementation "org.lsposed.hiddenapibypass:hiddenapibypass:6.1"
    implementation 'androidx.window:window:1.4.0'
    implementation 'commons-io:commons-io:2.20.0'
    implementation "com.termux:termux-am-library:v2.0.0"
}
